<resources>
    <string name="app_name">I2 Study</string>
    <string name="logo_alt">I2 Study logo</string>
    <string name="schedule_alt">schedule_alt</string>
    <string name="actual_alt">actual_alt</string>
    <string name="points_alt">points_alt</string>
    <string name="attendance_alt">attendance_alt</string>
    <string name="profile_alt">profile_alt</string>
    <string name="auth_page_hello">Добро пожаловать</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="log_in">Войти</string>
    <string name="log_out">Выйти</string>
    <string name="name">Имя:</string>
    <string name="group_place">Группа:</string>
    <string name="group">ИС20–2</string>
    <string name="back">Назад</string>
    <string name="admin_welcome">Админ панель</string>
    <string name="admin_add_user">Добавьте пользователя:</string>
    <string name="admin_add_lesson">Добавьте урок:</string>
    <string name="role_hint">Role</string>
    <string name="reg_in">Зарегистрировать</string>
    <string name="name_hint">Name</string>
    <string name="group_number_hint">Group number</string>
    <string name="room_hint">Room</string>
    <string name="day_hint">Day</string>
    <string name="start_time_hint">Start time</string>
    <string name="is_online_hint">Is online</string>
    <string name="lesson_type_hint">Lesson type</string>
    <string name="userId_hint">User id</string>
    <string name="groupId_hint">Group id</string>
    <string name="subjectId_hint">Subject id</string>
    <string name="add_lesson">Добавить</string>
    <string name="btn_users">Пользователи</string>
    <string name="btn_lessons">Уроки</string>
    <string name="actual_caption">Актуальное расписание</string>
    <string name="attendance_caption">Присутствие на уроке</string>
    <string name="point_caption">Ваши баллы</string>
    <string name="schedule_caption">Расписание на неделю</string>
    <string name="enter_code">Введите код, который Вам назвал учитель:</string>
    <string name="code_hint">Enter code</string>
    <string name="btn_enter_code">Отметить присутствие</string>
    <string name="to_start_lesson">Чтобы начать урок нажмите на кнопку:</string>
    <string name="btn_make_code">Начать урок</string>
    <string name="make_code_hint">Назовите код ученикам</string>
    <string name="attending">На уроке присутсвуют:</string>
    <string name="choose_subject">Выберите предмет:</string>
    <string name="atten">Посещаемость:</string>
    <string name="enter">Вход</string>
</resources>