<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    android:hapticFeedbackEnabled="false"
    tools:context=".activities.AttendanceTeacherActivity">

    <ImageButton
        android:id="@+id/imageButtonProfile"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_alt"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_below="@id/imageButtonProfile"
        android:fontFamily="@font/roboto_black_italic"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp"
        android:maxLength="18"
        />

    <TextView
        android:id="@+id/textViewCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_black_italic"
        android:text="@string/attendance_caption"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo_alt"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textViewToStartLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCaption"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="@string/to_start_lesson"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/textViewCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewToStartLesson"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="----"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textViewHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="@string/make_code_hint"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonMakeCode"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewHint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:background="@drawable/gradient"
        android:text="@string/btn_make_code"
        android:textColor="@color/white"

        android:textSize="20sp" />

    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/buttonMakeCode"
        android:layout_centerHorizontal="true"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/textViewAttending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="@string/attending"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listViewAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewAttending"
        android:layout_above="@id/viewBottom"
        android:layout_marginBottom="10sp" />

    <View
        android:id="@+id/viewBottom"
        android:layout_width="match_parent"
         android:layout_height="2dp"
        android:layout_above="@id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true">

        <ImageButton
            android:id="@+id/imageButtonPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/points_alt"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/points" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"/>

        <ImageButton
            android:id="@+id/imageButtonSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"

            android:contentDescription="@string/schedule_alt"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/schedule" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"/>

        <ImageButton
            android:id="@+id/imageButtonActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/actual_alt"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/actual" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"/>

        <ImageButton
            android:id="@+id/imageButtonAttendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_blue"
            android:contentDescription="@string/attendance_alt"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/attendance" />
    </LinearLayout>

</RelativeLayout>