<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent"
    android:hapticFeedbackEnabled="false"
    tools:context=".activities.ScheduleActivity">

    <ImageButton
        android:id="@+id/imageButtonProfile"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_alt"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_below="@id/imageButtonProfile"
        android:fontFamily="@font/roboto_black_italic"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp"
        android:maxLength="18"
         />

    <TextView
        android:id="@+id/textViewCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_black_italic"
        android:text="@string/schedule_caption"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo_alt"
        app:srcCompat="@drawable/logo2" />

    <ListView
        android:id="@+id/listViewSchedule"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_above="@id/linearLayout2"
        android:layout_below="@id/textViewCaption" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true">

        <ImageButton
            android:id="@+id/imageButtonPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/points_alt"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/points" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"/>

        <ImageButton
            android:id="@+id/imageButtonSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_blue"

            android:contentDescription="@string/schedule_alt"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/schedule" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"/>

        <ImageButton
            android:id="@+id/imageButtonActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/actual_alt"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/actual" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/grey"/>

        <ImageButton
            android:id="@+id/imageButtonAttendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/attendance_alt"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/attendance" />
    </LinearLayout>

</RelativeLayout>